src/test/ui/issues/issue-73427.stderr
error[E0423]: expected value, found enum `A`
  --> $DIR/issue-73427.rs:29:5
   |
LL |     A.foo();
   |     ^ not a value

error[E0423]: expected value, found enum `B`
  --> $DIR/issue-73427.rs:31:5
   |
LL |     B.foo();
   |     ^ not a value

error[E0423]: expected value, found enum `C`
  --> $DIR/issue-73427.rs:33:5
   |
LL |     C.foo();
   |     ^ not a value

error[E0423]: expected value, found enum `D`
  --> $DIR/issue-73427.rs:35:5
   |
LL |     D.foo();
   |     ^ not a value

error[E0423]: expected function, tuple struct or tuple variant, found enum `A`
  --> $DIR/issue-73427.rs:40:13
   |
LL |     let x = A(3);
   |             ^ not a function, tuple struct or tuple variant

error[E0532]: expected tuple struct or tuple variant, found enum `A`
  --> $DIR/issue-73427.rs:42:12
   |
LL |     if let A(3) = x { }
   |            ^ not a tuple struct or tuple variant

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0423, E0532.
For more information about an error, try `rustc --explain E0423`.
